--- a/src/views/components/dashboard/skillset.pug
+++ b/src/views/components/dashboard/skillset.pug
@@ -1,37 +1,27 @@
 mixin skills-card(skillset)
     .card.w-100.mb-4
         .card-body
-            h4.card-title Skills
+            h4.card-title.text-center Skills
             .row
                 .col-12
-                    .alert.alert-success
-                        h5 High Proficiency
-                        each skill in skillset
-                            if skill.proficiency > 66
-                                span.badge.bg-success.rounded-pill.p-2.mr-1.mb-1(
-                                    data-toggle='modal'
-                                    data-target=`#edit-skill-modal-${skill._id}`)= skill.name
+                    each skill in skillset
+                        if skill.proficiency > 66
+                            span.badge.bg-success.rounded-pill.p-2.mr-1.mb-1(
+                                data-toggle='modal'
+                                data-target=`#edit-skill-modal-${skill._id}`)= skill.name
+                    each skill in skillset
+                        if skill.proficiency > 33 && skill.proficiency <= 66
+                            span.badge.bg-warning.rounded-pill.p-2.mr-1.mb-1(
+                                data-toggle='modal'
+                                data-target=`#edit-skill-modal-${skill._id}`)= skill.name
+                    each skill in skillset
+                        if skill.proficiency <= 33
+                            span.badge.bg-danger.rounded-pill.p-2.mr-1.mb-1(
+                                data-toggle='modal'
+                                data-target=`#edit-skill-modal-${skill._id}`)= skill.name
             .row
                 .col-12
-                    .alert.alert-warning
-                        h5 Moderate Proficiency
-                        each skill in skillset
-                            if skill.proficiency > 33 && skill.proficiency <= 66
-                                span.badge.bg-warning.rounded-pill.p-2.mr-1.mb-1(
-                                    data-toggle='modal'
-                                    data-target=`#edit-skill-modal-${skill._id}`)= skill.name
-            .row
-                .col-12
-                    .alert.alert-danger
-                        h5 Low Proficiency
-                        each skill in skillset
-                            if skill.proficiency <= 33
-                                span.badge.bg-danger.rounded-pill.p-2.mr-1.mb-1(
-                                    data-toggle='modal'
-                                    data-target=`#edit-skill-modal-${skill._id}`)= skill.name
-            .row
-                .col-12
-                    button.btn.btn-primary.w-100(data-toggle='modal' data-target='#add-skill-modal') Add Skill
+                    button.btn.btn-outline-primary.w-100.mt-4(data-toggle='modal' data-target='#add-skill-modal') Add Skill
 
 mixin add-skill-modal
     #add-skill-modal.modal.fade(tabindex='1')
