--- a/src/views/themes.pug
+++ b/src/views/themes.pug
@@ -19,7 +19,8 @@ html(lang='en-US')
                                 | Budgie Blue is a soft blue theme which
                                 | maintains professionalism while introducing
                                 | minimal style.
-                            a.btn.btn-secondary.badge(href='themes/preview?theme=budgie-blue') Preview
-                            a.btn.btn-success.badge.ml-2 Buy
+                            a.btn.badge.bg-primary.rounded-pill Buy
+                            a.btn.badge.bg-secondary.rounded-pill.ml-2(href='themes/preview?theme=budgie-blue') Preview
+                            
 
         include components/scripts
