--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,10 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
+
 html,
 body {
     padding: 0;
     margin: 0;
+    font-family: Quicksand;
+}
+
+button {
+    font-family: Quicksand;
+}
+
+label {
+    font-size: 0.75em;
+    color: var(--bs-primary);
 }
 
 #window {
     width: 100vw;
     height: 100vh;
+}
+
+/***************************************************
+************** BOOTSTRAP OVERRIDES *****************
+***************************************************/
+
+input.form-control,
+button.btn,
+.form-control,
+.btn {
+    border-radius: 0;
+    outline: none; /** will use bootstrap border **/
+}
+
+.card {
+    border-radius: 0;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
