--- a/src/views/components/dashboard/work-experience.pug
+++ b/src/views/components/dashboard/work-experience.pug
@@ -1,21 +1,19 @@
 mixin work-experience-card(experiences)
     .card.w-100.mb-4
         .card-body
-            h4.card-title Work Experience
-            each experience in experiences
-                +work-experience-item(experience)
-            button.btn.btn-primary.btn-block(
+            h4.card-title.text-center Work Experience
+            ul.list-group.list-group-flush
+                each experience in experiences
+                    +work-experience-item(experience)
+            button.btn.btn-outline-primary.btn-block.mt-4(
                 data-toggle='modal'
                 data-target='#add-work-modal') Add Work Experience
 
 mixin work-experience-item(experience)
-    .alert.alert-success
-        .row
-            .col-12.col-md-8
-                .btn= `${experience.position} at ${experience.organization}`
-            .col-12.col-md-4.text-center.text-md-right
-                button.btn.btn-light(data-toggle='modal' data-target=`#edit-work-experience-${experience._id}`)
-                    ion-icon(name='create-outline')
+    li.list-group-item
+        button.btn.btn-light.mr-4(data-toggle='modal' data-target=`#edit-work-experience-${experience._id}`)
+            ion-icon(name='create-outline')
+        span= `${experience.position} at ${experience.organization}`
 
 mixin add-work-experience-modal
     #add-work-modal.modal.fade(tabindex='1')
@@ -28,18 +26,23 @@ mixin add-work-experience-modal
                             span &times;
                     .modal-body
                         .row
-                            .col-12 Position
+                            .col-12
+                                label Position
                                 input.form-control.mb-2(name='position')
                         .row
-                            .col-12 Organization
+                            .col-12
+                                label Organization
                                 input.form-control.mb-2(name='organization')
                         .row
-                            .col-12.col-md-6 Start
+                            .col-12.col-md-6
+                                label Start
                                 input.form-control.mb-2(name='start-date' placeholder='mm/dd/yyyy')
-                            .col-12.col-md-6 End
+                            .col-12.col-md-6
+                                label End
                                 input.form-control.mb-2(name='end-date' placeholder='mm/dd/yyyy')
                         .row
-                            .col-12 Description
+                            .col-12
+                                label Description
                                 textarea.form-control.mb-2(name='description')
                     .modal-footer
                         button.btn.btn-secondary(
