Tweaked skills view

--- a/src/views/components/dashboard/skillset.pug
+++ b/src/views/components/dashboard/skillset.pug
@@ -2,7 +2,7 @@ mixin skills-card(skillset)
     .card.w-100.mb-4
         .card-body
             h4.card-title.text-center Skills
-            .row
+            .row.mt-4
                 .col-12
                     each skill in skillset
                         if skill.proficiency > 66
