--- a/src/views/components/dashboard/work-experience.pug
+++ b/src/views/components/dashboard/work-experience.pug
@@ -45,10 +45,10 @@ mixin add-work-experience-modal
                                 label Description
                                 textarea.form-control.mb-2(name='description')
                     .modal-footer
-                        button.btn.btn-secondary(
+                        button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary(type='submit') Save
+                        button.btn.btn-primary.btn-sm(type='submit') Save
 
 mixin edit-work-experience-modal(experience)
     .modal.fade(
@@ -84,7 +84,7 @@ mixin edit-work-experience-modal(experience)
                                     input(type='checkbox' name='delete')
                                     span.ml-2 Delete
                     .modal-footer
-                        button.btn.btn-secondary(
+                        button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary(type='submit') Save
+                        button.btn.btn-primary.btn-sm(type='submit') Save
