--- a/src/views/components/dashboard/skillset.pug
+++ b/src/views/components/dashboard/skillset.pug
@@ -45,10 +45,10 @@ mixin add-skill-modal
                                         input.form-range.w-100(name='proficiency' type='range' min='1' max='100' step='1')
                                     .col-2 100
                     .modal-footer
-                        button.btn.btn-secondary(
+                        button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary(type='submit') Add
+                        button.btn.btn-primary.btn-sm(type='submit') Add
 
 mixin edit-skill-modal(skill)
     .modal.fade(tabindex='1' id=`edit-skill-modal-${skill._id}`)
@@ -77,7 +77,7 @@ mixin edit-skill-modal(skill)
                                             value=skill.proficiency)
                                     .col-2 100
                     .modal-footer
-                        button.btn.btn-secondary(
+                        button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary(type='submit') Update
+                        button.btn.btn-primary.btn-sm(type='submit') Update
