--- a/src/views/account.pug
+++ b/src/views/account.pug
@@ -14,10 +14,10 @@ html(lang='en-US')
                     form.row(action='/app/account/login' method='POST')
                         .col-12
                             label Email
-                            input.form-control.mb-2(type='email' name='email')
+                            input.form-control.mb-2(type='email' name='email' required)
                         .col-12
                             label Password
-                            input.form-control.mb-2(type='password' name='password')
+                            input.form-control.mb-2(type='password' name='password' required)
                         .col-12
                             button.btn.btn-primary(type='submit') Login
                 .col.text-center(style='padding-top:10%;padding-bottom:10%;')
@@ -25,22 +25,27 @@ html(lang='en-US')
                 .col-12.col-md-5
                     h2 Sign Up
 
-                    form.row(action='/app/account/signup' method='POST')
+                    form.row(action='/app/account/signup' method='POST' role='form' data-toggle='validator')
                         .col-12.col-md-6
-                            label First Name
-                            input.form-control.mb-2(type='text' name='fname')
+                            .input-group
+                                label.w-100 First Name
+                                input.form-control.mb-2(type='text' name='fname' required)
                         .col-12.col-md-6
-                            label Last Name
-                            input.form-control.mb-2(type='text' name='lname')
+                            .input-group
+                                label.w-100 Last Name
+                                input.form-control.mb-2(type='text' name='lname' required)
                         .col-12
-                            label Email
-                            input.form-control.mb-2(type='email' name='email')
+                            .input-group
+                                label.w-100 Email
+                                input.form-control.mb-2(type='email' name='email' required)
                         .col-12.col-md-6
-                            label Password
-                            input.form-control.mb-2(type='password' name='password')
+                            .input-group
+                                label.w-100 Password
+                                input.form-control.mb-2(type='password' name='password' required)
                         .col-12.col-md-6
-                            label Confirm Password
-                            input.form-control.mb-2(type='password' name='passwordconf')
+                            .input-group
+                                label.w-100 Confirm Password
+                                input.form-control.mb-2(type='password' name='passwordconf' required)
                         .col-12
                             button.btn.btn-primary(type='submit') Sign Up
 
