Sonar bug fixes

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 button {
-    font-family: Quicksand;
+    font-family: Quicksand, "Avenir Next", Sawasdee, Helvetica, sans-serif;
 }
 
 label {
