--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -40,7 +40,7 @@ html(lang='en-US')
                 .col-12.col-md-6
                     +education-card(educationHistory)
                     +work-experience-card(workExperience)
-                    +certification-card(certifications)
+                    +certifications-card(certifications)
 
 
         include components/scripts
