Added missing labels and used default sizing

--- a/src/views/account.pug
+++ b/src/views/account.pug
@@ -28,23 +28,23 @@ html(lang='en-US')
                     form.row(action='/app/account/signup' method='POST' role='form' data-toggle='validator')
                         .col-12.col-md-6
                             .input-group
-                                label.w-100 First Name
+                                label First Name
                                 input.form-control.mb-2(type='text' name='fname' required)
                         .col-12.col-md-6
                             .input-group
-                                label.w-100 Last Name
+                                label Last Name
                                 input.form-control.mb-2(type='text' name='lname' required)
                         .col-12
                             .input-group
-                                label.w-100 Email
+                                label Email
                                 input.form-control.mb-2(type='email' name='email' required)
                         .col-12.col-md-6
                             .input-group
-                                label.w-100 Password
+                                label Password
                                 input.form-control.mb-2(type='password' name='password' required)
                         .col-12.col-md-6
                             .input-group
-                                label.w-100 Confirm Password
+                                label Confirm Password
                                 input.form-control.mb-2(type='password' name='passwordconf' required)
                         .col-12
                             button.btn.btn-primary(type='submit') Sign Up
