--- a/src/views/components/dashboard/education.pug
+++ b/src/views/components/dashboard/education.pug
@@ -1,7 +1,9 @@
 mixin education-card(educationHistory)
     .card.w-100.mb-4
         .card-body
-            h4.card-title.text-center Education
+            h4.card-title.text-center
+                ion-icon.text-primary.mr-4(name='school-outline')
+                | Education
             ul.list-group.list-group-flush
                 each education in educationHistory
                     +education-item(education)
