Added popinputs for personal info card

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -26,6 +26,17 @@ ion-icon {
     height: 100vh;
 }
 
+input.pop-input {
+    border: none;
+    padding: 0;
+    transition: 0.25s padding;
+}
+
+input.pop-input:active,
+input.pop-input:focus {
+    padding: 0.375rem 0.75rem;
+}
+
 /***************************************************
 ************** BOOTSTRAP OVERRIDES *****************
 ***************************************************/
