Added input formatters

--- a/src/views/components/dashboard/personal-info.pug
+++ b/src/views/components/dashboard/personal-info.pug
@@ -18,7 +18,7 @@ mixin personal-info-card(account)
                         input.form-control.mb-2.pop-input(name='email' value=account.email placeholder=' ')
                     .col-12.col-md-6
                         label Phone
-                        input.form-control.mb-2.pop-input(name='phone' value=account.phone placeholder=' ')
+                        input.form-control.mb-2.pop-input(name='phone' value=account.phone placeholder=' ' data-type='phone')
                 .row
                     .col-12
                         label Address Line 1
